--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: generic
-sudo: required
-dist: trusty
+dist: xenial
 
 env:
   global:
     - MONGODB_VERSION=3.6.14
-    - LIBMONGOC_VERSION=r1.15
-    - LIBMONGOC_CACHE_DIR=${HOME}/libmongoc-${LIBMONGOC_VERSION}
 
 jobs:
   include:
@@ -15,7 +12,7 @@ jobs:
       os: osx
       install: ./Tests/Scripts/install_dependencies.sh sourcery
       before_script: skip
-      script: 
+      script:
         - make linuxmain SOURCERY=${PWD}/sourcery/bin/sourcery
         - git diff --exit-code Tests/LinuxMain.swift
         - make exports SOURCERY=${PWD}/sourcery/bin/sourcery
@@ -47,7 +44,6 @@ jobs:
 
 install:
   - INSTALLER=Tests/Scripts/install_dependencies.sh
-  - ./${INSTALLER} libmongoc
   - ./${INSTALLER} mongodb
   - if [[ "$TRAVIS_JOB_NAME" != "code coverage" ]]; then eval "$(curl -sL https://swiftenv.fuller.li/install.sh)"; fi
 
@@ -59,7 +55,3 @@ before_script:
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then make test-pretty; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then make test; fi
-
-cache:
-  directories:
-    - ${LIBMONGOC_CACHE_DIR}
