--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -244,6 +244,39 @@ tasks:
         - func: "run tests"
         - func: "stop mongo-orchestration"
 
+    - name: "test-4.2-standalone"
+      tags: ["4.2", "standalone"]
+      commands:
+        - func: "prepare resources"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.2"
+            TOPOLOGY: "server"
+        - func: "run tests"
+        - func: "stop mongo-orchestration"
+
+    - name: "test-4.2-replica_set"
+      tags: ["4.2", "replica_set"]
+      commands:
+        - func: "prepare resources"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.2"
+            TOPOLOGY: "replica_set"
+        - func: "run tests"
+        - func: "stop mongo-orchestration"
+
+    - name: "test-4.2-sharded_cluster"
+      tags: ["4.2", "sharded_cluster"]
+      commands:
+        - func: "prepare resources"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            MONGODB_VERSION: "4.2"
+            TOPOLOGY: "sharded_cluster"
+        - func: "run tests"
+        - func: "stop mongo-orchestration"
+
     - name: "test-latest-standalone"
       tags: ["latest", "standalone"]
       commands:
@@ -290,6 +323,10 @@ axes:
         display_name: "latest"
         variables:
            MONGODB_VERSION: "latest"
+      - id: "4.2"
+        display_name: "4.2"
+        variables:
+          MONGODB_VERSION: "4.2"
       - id: "4.0"
         display_name: "4.0"
         variables:
@@ -346,6 +383,7 @@ buildvariants:
   display_name: "${swift-version} ${os-fully-featured}"
   tasks:
      - ".latest"
+     - ".4.2"
      - ".4.0"
      - ".3.6"
 
