--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -52,6 +52,7 @@ excluded:
   - Sources/libmongoc
   - Package.swift
   - Examples/*/Package.swift
+  - Examples/Docs/*.swift
   - Tests/LinuxMain.swift
 
 trailing_whitespace:
