update swiftlint, appease swiftlint on new xcode

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,14 @@ jobs:
         - make linuxmain SOURCERY=${PWD}/sourcery/bin/sourcery
         - git diff --exit-code Tests/LinuxMain.swift
 
+    - stage: pre-tests
+      name: lint
+      os: osx
+      osx_image: xcode11
+      install: ./Tests/Scripts/install_dependencies.sh swiftlint && ./Tests/Scripts/install_dependencies.sh swiftformat
+      before_script: skip
+      script: ${PWD}/swiftlint/swiftlint --strict && ${PWD}/SwiftFormat/CommandLineTool/swiftformat --lint .
+
     - stage: tests
       os: osx
       osx_image: xcode10.1
@@ -48,14 +56,6 @@ jobs:
       osx_image: xcode10.1
       script: make coverage
       after_success: bash <(curl -s https://codecov.io/bash)
-
-    - stage: post-tests
-      name: lint
-      os: osx
-      osx_image: xcode11
-      install: ./Tests/Scripts/install_dependencies.sh swiftlint && ./Tests/Scripts/install_dependencies.sh swiftformat
-      before_script: skip
-      script: ${PWD}/swiftlint/swiftlint --strict && ${PWD}/SwiftFormat/CommandLineTool/swiftformat --lint .
 
 
 install:
