--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ jobs:
     - stage: pre-tests
       name: lint
       os: osx
-      osx_image: xcode11
+      osx_image: xcode11.1
       install: ./Tests/Scripts/install_dependencies.sh swiftlint && ./Tests/Scripts/install_dependencies.sh swiftformat
       before_script: skip
-      script: ${PWD}/swiftlint/swiftlint --strict && ${PWD}/SwiftFormat/CommandLineTool/swiftformat --lint .
+      script: ${PWD}/swiftlint/swiftlint --strict && ${PWD}/SwiftFormat/CommandLineTool/swiftformat --verbose --lint .
 
     - stage: tests
       os: osx
