--- a/.travis.yml
+++ b/.travis.yml
@@ -38,6 +38,7 @@ jobs:
     - stage: post-tests
       name: lint
       os: osx
+      osx_image: xcode11.1
       install: ./Tests/Scripts/install_dependencies.sh swiftlint
       before_script: skip
       script: ${PWD}/swiftlint/swiftlint --strict
