--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -177,6 +177,7 @@ functions:
       params:
         script: |
           ${PREPARE_SHELL}
+          sleep 1 # wait for existing mongod instances to finish shutting down
           find $MONGO_ORCHESTRATION_HOME -name \*.log | xargs tar czf mongodb-logs.tar.gz
     - command: s3.put
       params:
