--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -412,11 +412,10 @@ axes:
         display_name: "Swift 5.0"
         variables:
            SWIFT_VERSION: "5.0.3"
-      # TODO SWIFT-634: uncomment this
-      # - id: "5.1"
-      #   display_name: "Swift 5.1"
-      #   variables:
-      #      SWIFT_VERSION: "5.1"
+      - id: "5.1"
+        display_name: "Swift 5.1"
+        variables:
+           SWIFT_VERSION: "5.1"
 
   - id: ssl
     display_name: SSL
