Revert "combine into single task"
This reverts commit a3d496e12ff51b85697cbdcb96716ab26e9949b6.

--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -122,6 +122,7 @@ functions:
         script: |
           ${PREPARE_SHELL}
           sh ${DRIVERS_TOOLS}/.evergreen/stop-orchestration.sh
+  "upload-mo-artifacts":
     - command: shell.exec
       params:
         script: |
@@ -197,6 +198,7 @@ pre:
 
 post:
   - func: "stop mongo-orchestration"
+  - func: "upload-mo-artifacts"
   - func: "cleanup"
 
 tasks:
