--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -122,6 +122,22 @@ functions:
         script: |
           ${PREPARE_SHELL}
           sh ${DRIVERS_TOOLS}/.evergreen/stop-orchestration.sh
+  "upload-mo-artifacts":
+    - command: shell.exec
+      params:
+        script: |
+          ${PREPARE_SHELL}
+          find $MONGO_ORCHESTRATION_HOME -name \*.log | xargs tar czf mongodb-logs.tar.gz
+    - command: s3.put
+      params:
+        aws_key: ${aws_key}
+        aws_secret: ${aws_secret}
+        local_file: mongodb-logs.tar.gz
+        remote_file: ${UPLOAD_BUCKET}/${build_variant}/${revision}/${version_id}/${build_id}/logs/${task_id}-${execution}-mongodb-logs.tar.gz
+        bucket: mciuploads
+        permissions: public-read
+        content_type: ${content_type|application/x-gzip}
+        display_name: "mongodb-logs.tar.gz"
 
   "run tests":
     - command: shell.exec
@@ -181,6 +197,8 @@ pre:
   - func: "install dependencies"
 
 post:
+  - func: "stop mongo-orchestration"
+  - func: "upload-mo-artifacts"
   - func: "cleanup"
 
 tasks:
@@ -194,7 +212,6 @@ tasks:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "server"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-3.6-replica_set"
       tags: ["3.6", "replica_set"]
@@ -206,7 +223,6 @@ tasks:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "replica_set"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-3.6-sharded_cluster"
       tags: ["3.6", "sharded_cluster"]
@@ -218,7 +234,6 @@ tasks:
             MONGODB_VERSION: "3.6"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.0-standalone"
       tags: ["4.0", "standalone"]
@@ -230,7 +245,6 @@ tasks:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "server"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.0-replica_set"
       tags: ["4.0", "replica_set"]
@@ -242,7 +256,6 @@ tasks:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "replica_set"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.0-sharded_cluster"
       tags: ["4.0", "sharded_cluster"]
@@ -254,7 +267,6 @@ tasks:
             MONGODB_VERSION: "4.0"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.2-standalone"
       tags: ["4.2", "standalone"]
@@ -266,7 +278,6 @@ tasks:
             MONGODB_VERSION: "4.2"
             TOPOLOGY: "server"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.2-replica_set"
       tags: ["4.2", "replica_set"]
@@ -278,7 +289,6 @@ tasks:
             MONGODB_VERSION: "4.2"
             TOPOLOGY: "replica_set"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-4.2-sharded_cluster"
       tags: ["4.2", "sharded_cluster"]
@@ -290,7 +300,6 @@ tasks:
             MONGODB_VERSION: "4.2"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-latest-standalone"
       tags: ["latest", "standalone"]
@@ -302,7 +311,6 @@ tasks:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "server"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-latest-replica_set"
       tags: ["latest", "replica_set"]
@@ -314,7 +322,6 @@ tasks:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "replica_set"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-latest-sharded_cluster"
       tags: ["latest", "sharded_cluster"]
@@ -326,7 +333,6 @@ tasks:
             MONGODB_VERSION: "latest"
             TOPOLOGY: "sharded_cluster"
         - func: "run tests"
-        - func: "stop mongo-orchestration"
 
     - name: "test-atlas-connectivity"
       tags: ["atlas-connect"]
