--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -58,7 +58,7 @@ excluded:
 trailing_whitespace:
   ignores_comments: false
 
-# Once we drop Swift 5.0, we can remove this section and start applying the
+# TODO SWIFT-618: Once we drop Swift 5.0, we can remove this section and start applying the
 # rule to all 3 possible included types: closures, functions, and getters.
 implicit_return:
   included:
