--- a/.jazzy.yml
+++ b/.jazzy.yml
@@ -3,7 +3,7 @@ author_url: https://github.com/mongodb/mongo-swift-driver
 github_url: https://github.com/mongodb/mongo-swift-driver
 theme: fullwidth
 swift_build_tool: spm
-readme: "docs/README.md"
+readme: "etc/docs-main.md"
 documentation: "Guides/*.md"
 
 custom_categories:
