--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -7,6 +7,7 @@ disabled_rules:
   - type_name
   - inclusive_language # disabled until we complete work for the "remove offensive terminology" project.
   - cyclomatic_complexity
+  - opening_brace # conflicts with SwiftFormat wrapMultilineStatementBraces
 
 opt_in_rules:
   - array_init
