--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -5,6 +5,9 @@ disabled_rules:
   - todo
   - type_body_length
   - type_name
+  - inclusive_language # disabled until we complete work for the "remove offensive terminology" project.
+  - cyclomatic_complexity
+  - opening_brace # conflicts with SwiftFormat wrapMultilineStatementBraces
 
 opt_in_rules:
   - array_init
