--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -57,8 +57,7 @@ excluded:
   - Tests/LinuxMain.swift
   - Sources/MongoSwiftSync/Exports.swift
   - Sources/MongoSwift/MongoSwiftVersion.swift
-  - etc/swiftlint
-  - etc/SwiftFormat
+  - opt
 
 trailing_whitespace:
   ignores_comments: false
