--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
 # Ignore vendored code for language statistics in GitHub
-Sources/CLibMongoC/* linguist-vendored
+Sources/CLibMongoC/** linguist-vendored
